# torchbox3d

./: .gitignore  CITATION.cff  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
conda/: environment.yml  install.sh
conf/: config.yaml
conf/dataset/: av2.yaml
conf/model/: centerpoint_100x100m.yaml  centerpoint_200x200m.yaml  centerpoint_50x50m.yaml  centerpoint_point_pillars_25x25m.yaml  centerpoint_point_pillars_50x50m.yaml  centerpoint_sparse_voxelnet_100x100m.yaml  centerpoint_sparse_voxelnet_200x200m.yaml  centerpoint_sparse_voxelnet_50x50m.yaml
scripts/: train.py  validate.py
src/torchbox3d/: __init__.py
src/torchbox3d/datasets/: __init__.py  datamodule.py  dataset.py
src/torchbox3d/datasets/argoverse/: __init__.py  av2.py  constants.py  utils.py
src/torchbox3d/math/: __init__.py  constants.py  conversions.py  crop.py  kernels.py  neighbors.py  polytope.py
src/torchbox3d/math/geometry/: __init__.py
src/torchbox3d/math/linalg/: __init__.py
src/torchbox3d/math/ops/: __init__.py  cluster.py  coding.py  index.py  (+2 more)
src/torchbox3d/nn/: __init__.py
src/torchbox3d/rendering/: __init__.py  tensorboard.py
src/torchbox3d/structures/: __init__.py  collater.py  cuboids.py  data.py  grid.py  meta.py  ndgrid.py  outputs.py  regular_grid.py  sparse_tensor.py  targets.py
src/torchbox3d/utils/: __init__.py  collater.py  collections.py  io.py
tests/: __init__.py
tests/datasets/argoverse/: test_av2.py  test_utils.py
tests/math/: test_conversions.py  test_geometry.py  test_neighbors.py  test_polytope.py
tests/math/ops/: test_index.py  test_pool.py
tests/math/transforms/: test_splatter_heatmap.py
tests/rendering/ops/: test_shaders.py
tests/structures/: test_cuboid.py  test_ndgrid.py
tests/utils/: __init__.py  test_io.py
(+33 files in other folders)
