[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [".nox", ".eggs"]
src_paths = ["src", "tests", "scripts"]
known_first_party = ["torchbox3d"]
line_length = 79

[tool.black]
line-length = 79

[tool.mypy]
exclude = "build"
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = "numpy.typing.mypy_plugin"
strict = true

[[tool.mypy.overrides]]
module = "torch.*"
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = ["pytorch_lightning", "torchsparse"]
disallow_subclassing_any = false

[tool.pyright]
include = ["src"]

reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnknownMemberType = false
reportUntypedFunctionDecorator = false

[tool.pytest.ini_options]
minversion = "6.0"
env = ["PYTORCH_JIT = 0"]
addopts = "--cov-report term-missing:skip-covered --cov src/torchbox3d"
testpaths = [
    "tests",
]