[metadata]
description_file = README.md
license = MIT
name = torchbox3d
version = attr: torchbox3d.__version__

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires =
  av
  hydra-core
  kornia
  matplotlib
  numpy
  omegaconf
  pandas
  pip
  pyarrow
  pytorch-lightning
  pyyaml
  rich
  s3fs
  scipy
  torch
  torchvision

package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[darglint]
strictness = short

[flake8]
enable_extensions = G
exclude = build,.nox
ignore = ANN101,ANN102,E201,E203,E241,E704,E711,E722,E741,W291,W293,W391,W503,F821,F401,F811,F841,P101,G004,G002,I201,I100,I101
max_line_length = 79
